Kinda repaired lazy load for location Primarly bcs endpoint for myrek