@@ -7,12 +7,16 @@ import cz.trailsthroughshadows.api.table.schematic.hex.model.dto.HexEnemyDTO;
 import cz.trailsthroughshadows.api.table.schematic.hex.model.dto.HexObstacleDTO;
 import cz.trailsthroughshadows.api.table.schematic.location.model.Location;
 import cz.trailsthroughshadows.api.table.schematic.part.model.Part;
+import cz.trailsthroughshadows.api.table.schematic.part.model.PartDTO;
+import cz.trailsthroughshadows.api.util.reflect.Initialization;
 import jakarta.persistence.*;
 import lombok.Data;
 import lombok.NoArgsConstructor;
+import org.modelmapper.ModelMapper;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Data
 @Entity
@@ -24,55 +28,51 @@ public class LocationDTO {
 
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
-    private int id;
+    protected int id;
 
     @Column(name = "title", nullable = false)
-    private String title;
+    protected String title;
 
     @Column(name = "tag", length = 32)
-    private String tag;
+    protected String tag;
 
     @Enumerated(EnumType.STRING)
     @Column(name = "type", nullable = false)
-    private Location.Type type;
+    protected Location.Type type;
 
     @Column(name = "description", columnDefinition = "TEXT")
-    private String description;
+    protected String description;
 
     @OneToMany(mappedBy = "key.idLocation", cascade = CascadeType.ALL, fetch = FetchType.EAGER)
-    private List<LocationPartDTO> parts;
+    protected List<LocationPartDTO> parts;
 
     @OneToMany(mappedBy = "idLocation", cascade = CascadeType.ALL, fetch = FetchType.LAZY)
-    private List<LocationDoorDTO> doors;
+    protected List<LocationDoorDTO> doors;
 
     @OneToMany(mappedBy = "idLocation", cascade = CascadeType.ALL, fetch = FetchType.LAZY)
-    private List<LocationStartDTO> startHexes;
+    protected List<LocationStartDTO> startHexes;
 
     @OneToMany(mappedBy = "idStart", cascade = CascadeType.ALL, fetch = FetchType.LAZY)
-    private List<LocationPathDTO> paths;
+    protected List<LocationPathDTO> paths;
 
     @OneToMany(mappedBy = "key.idLocation", cascade = CascadeType.ALL, fetch = FetchType.LAZY)
-    private List<HexEnemyDTO> enemies;
+    protected List<HexEnemyDTO> enemies;
 
     @OneToMany(mappedBy = "key.idLocation", cascade = CascadeType.ALL, fetch = FetchType.LAZY)
-    private List<HexObstacleDTO> obstacles;
+    protected List<HexObstacleDTO> obstacles;
 
     public List<Part> getParts() {
-        if (parts == null) {
-            return new ArrayList<>();
-        }
-
+        if (parts == null) return new ArrayList<>();
+        ModelMapper modelMapper = new ModelMapper();
         return parts.stream()
-                .map(locationPart -> Part.fromDTO(
-                        locationPart.getPart(),
-                        locationPart.getRotation(),
-                        enemies.stream()
-                                .filter(hexEnemy -> hexEnemy.getKey().getIdPart() == locationPart.getPart().getId())
-                                .toList(),
-                        obstacles.stream()
-                                .filter(hexObstacle -> hexObstacle.getKey().getIdPart() == locationPart.getPart().getId())
-                                .toList()
-                )).toList();
+                .map(LocationPartDTO::getPart)
+                .map(partDTO -> modelMapper.map(partDTO, Part.class))
+                .collect(Collectors.toList());
     }
+
+    public void loadAll(){
+        Initialization.hibernateInitializeAll(this);
+    }
+
 }
 
